# python-stiebel-eltron

./: .devcontainer.json  .gitignore  .travis.yml  LICENSE  README.md  example.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.py  tox.ini
.github/: dependabot.yaml
.github/workflows/: lint_test.yml  release.yml  test-python-package.yml
api/: energy_system_information.csv  lwz_energy_data.csv  lwz_energy_management_settings.csv  lwz_energy_system_information.csv  lwz_system_parameters.csv  lwz_system_state.csv  lwz_system_values.csv  wpm_energy_data.csv  wpm_energy_management_settings.csv  wpm_energy_system_information.csv  wpm_system_parameters.csv  wpm_system_state.csv  wpm_system_values.csv
examples/: wpm.py
pystiebeleltron/: pystiebeleltron.py
scripts/: gen.sh  generate.py  setup.sh
scripts/templates/: lwztemplate.j2  wpmtemplate.j2
src/pystiebeleltron/: lwz.py  pystiebeleltron.py
test/: mock_modbus_server.py  test_pystiebeleltron.py
tests/: MockModbusServer.py  mock_modbus_server.py  test_api.py  test_pystiebeleltron.py  test_stiebel_eltron.py
